--- a/index.html
+++ b/index.html
@@ -98,28 +98,28 @@
     </div>
     <div class="grid-photo">
         <div class="grid-photo-item">
-            <img src="img/H1.jpg" alt="">
+            <img src="img/H1.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H2.jpg" alt="">
+            <img src="img/H2.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H3.jpg" alt="">
+            <img src="img/H3.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H4.jpg" alt="">
+            <img src="img/H4.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H5.jpg" alt="">
+            <img src="img/H5.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H6.jpg" alt="">
+            <img src="img/H6.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H7.jpg" alt="">
+            <img src="img/H7.png" alt="">
         </div>
         <div class="grid-photo-item">
-            <img src="img/H8.jpg" alt="">
+            <img src="img/H8.png" alt="">
         </div>
     </div>
     <div class="wrapper">
